Added readme. More readable text on mobile.

--- a/code/index.html
+++ b/code/index.html
@@ -59,9 +59,9 @@
         <div class="main-news-contents">
           <h2>News of the Day</h2>
           <h3 class="main-subtitle">No More Capybara Hunting in Colombia</h3>
-          <p>... or almost. Colombian law enforcement arrested an <a
-              href="https://www.elespectador.com/judicial/cae-presunta-red-de-caza-ilegal-de-chiguiro-que-vendia-su-carne-en-malas-condiciones/">illegal
-              capybara hunting network</a> in the region of
+          <p>... or almost. Colombian law enforcement arrested an illegal
+            <a href="https://en.wikipedia.org/wiki/Capybara" target="_blank">capybara</a> hunting network in the region
+            of
             Casanare. The organization was not only hunting these adorable hamster-like creatures, but they were also
             selling their meat in awful sanitary conditions! Their arrest is part of a recent initiative for the
             conservation of the species in the South American country.
@@ -72,8 +72,11 @@
             license to hunt and sell capybara isn't easy, either! So it's good to hear that authorities are making sure
             people are actually leaving chiguiros alone. Long live the world's biggest rodent!
           </p>
-          <button class="cta-button donate" onclick="window.location.href='#jump-to-featured';">More news
-            please!</button>
+          <form
+            action="https://www.elespectador.com/judicial/cae-presunta-red-de-caza-ilegal-de-chiguiro-que-vendia-su-carne-en-malas-condiciones/"
+            method="get" target="_blank"><button type="submit" class="cta-button read-more">Read
+              more</button>
+          </form>
         </div>
       </div>
     </section>
@@ -86,7 +89,7 @@
             <img class="featured-image" src="./resources/img/site-content/chino-rocha-P69rwd0vyHw-unsplash.jpg"
               alt="Sample photo">
             <div class="featured-single">
-              <h3>Renewed bows</h3>
+              <h3>Renewed vows</h3>
               <p>Elderly couple finally gets to celebrate 50th anniversary postponed by the pandemic.</p>
               <a class="read-more-link"
                 href="https://www.today.com/news/couple-renews-vows-live-today-after-pandemic-postponed-50th-anniversary-t224083">Read
