add footer and changed nav-bar

--- a/code/index.html
+++ b/code/index.html
@@ -17,11 +17,11 @@
     <header class="header">
       <img class="logo" src="./logo_transparent.png" alt="Inte Hon Art Logo" />
       <nav class="navigation">
-        <a href="#">Music</a>
-        <p class="navigation">|</p>
         <a href="#">Art</a>
         <p class="navigation">|</p>
-        <a href="#">Photography</a>
+        <a href="#">Culture</a>
+        <p class="navigation">|</p>
+        <a href="#">Food</a>
         <p class="navigation">|</p>
         <a class="search-link" href="#">Search</a>
         
