Added ellipsis to text in news boxes, centered text in big news when mobile screen

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="hero">
       <!-- Some kind of logo and navbar -->
       <nav class="navigation">
-      <img class="logo" src="https://cdn.pixabay.com/photo/2015/09/09/17/06/jellyfish-931886_960_720.jpg" alt="Jellyfish logo">
+        <img class="logo" src="https://cdn.pixabay.com/photo/2015/09/09/17/06/jellyfish-931886_960_720.jpg" alt="Jellyfish logo">
         <h1>Ocean news</h1>  
         <div>
         <a class="link" href="#big-news-link">Big news</a>
@@ -63,14 +63,14 @@
       </article>
       <article class="other4">
         <div>
-          <img class="img-news" src="https://cdn.pixabay.com/photo/2012/03/04/00/02/animal-21731_960_720.jpg" alt="Sawfish">
-          <h4>The Sawfish - carpenter of the ocean?</h4>
+          <img class="img-news" src="https://cdn.pixabay.com/photo/2017/08/29/18/25/coral-2694453_960_720.jpg" alt="coral">
+          <h4>Coral cleans the ocean</h4>
           <p>Quisque ut dolor scelerisque, eleifend tortor vel, consectetur eros. Aenean condimentum commodo fringilla. Donec sed lorem eu sapien hendrerit ultricies ac et enim. Nam fringilla, lacus lacinia pulvinar sollicitudin, metus purus aliquam justo, non maximus libero est ac dui. Donec ultricies finibus purus. Aliquam dolor diam, feugiat et ultricies vel, hendrerit sed justo. Morbi imperdiet non augue ac porttitor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis ullamcorper nibh vitae aliquam iaculis. Fusce rhoncus bibendum urna vitae ultrices. Donec interdum, erat id aliquet interdum, metus arcu hendrerit felis, vel semper purus erat ac felis.</p>
         </div>
       </article>
       <article class="other5">
         <div>
-          <img class="img-news" src="https://cdn.pixabay.com/photo/2015/07/27/19/47/turtle-863336_960_720.jpg" alt="turtle">
+          <img class="img-news" src="https://cdn.pixabay.com/photo/2016/11/22/23/12/sea-turtle-1851102_960_720.jpg" alt="turtle">
           <h4>Turtles are actually quite grumpy</h4>
           <p>In ac dapibus leo, non rutrum libero. Duis ut lorem dolor. Mauris vitae nisl ante. Integer et suscipit tellus. Nullam bibendum mi eget risus facilisis tincidunt. Maecenas volutpat ornare accumsan. Morbi ut enim placerat sem elementum euismod eu vel ipsum. Vestibulum dui nunc, faucibus ac tincidunt eget, condimentum eleifend nisi. Nullam diam ante, dictum et feugiat at, pellentesque in tellus. Curabitur ultrices, mauris sit amet convallis sollicitudin, dolor leo auctor nunc, non placerat dui dui ac urna. Mauris interdum euismod condimentum. Vivamus tempus magna at lobortis ullamcorper. Fusce a scelerisque velit, a efficitur massa.</p>
         </div>
@@ -85,7 +85,7 @@
       <article class="other7">
         <div>
           <img class="img-news" src="https://cdn.pixabay.com/photo/2014/08/15/11/29/beach-418742_960_720.jpg" alt="coast where mountain meets ocean">
-          <h4>Hidden locations in the medditeranian sea</h4>
+          <h4>Beautiful hidden locations</h4>
           <p>Vivamus dictum, quam vel rhoncus sagittis, lacus massa imperdiet lacus, ut scelerisque libero diam eu purus. Integer faucibus convallis tortor. Ut non tempus erat, a fringilla ex. Quisque in mauris a felis tincidunt maximus. Nulla facilisi. Mauris at aliquet magna, vitae ultrices mi. Proin molestie elit pulvinar, ornare quam in, laoreet justo. Sed eget tristique odio. Nam sit amet lacus bibendum, pulvinar erat in, rhoncus enim. Aenean id semper orci. Fusce ac leo in neque finibus varius nec at felis.</p>
         </div>
       </article>
