added alt text to images

--- a/code/index.html
+++ b/code/index.html
@@ -87,89 +87,97 @@
           <!-- A grid containing several secondary news -->
           <article>
             <img class="featured-image" src="./resources/img/site-content/chino-rocha-P69rwd0vyHw-unsplash.jpg"
-              alt="Sample photo">
+              alt="elderly couple wedding">
             <div class="featured-single">
               <h3>Renewed vows</h3>
               <p>Elderly couple finally gets to celebrate 50th anniversary postponed by the pandemic.</p>
               <a class="read-more-link"
-                href="https://www.today.com/news/couple-renews-vows-live-today-after-pandemic-postponed-50th-anniversary-t224083">Read
+                href="https://www.today.com/news/couple-renews-vows-live-today-after-pandemic-postponed-50th-anniversary-t224083"
+                target="_blank">Read
                 more</a>
             </div>
           </article>
           <article>
             <img class="featured-image" src="./resources/img/site-content/rachel-barkdoll-Ns0wpr-DO-g-unsplash.jpg"
-              alt="Sample photo">
+              alt="woman playing baseball">
             <div class="featured-single">
               <h3>Baseball Dream</h3>
               <p class="featured-paragraph">70 year-old NY Yankees fan serves as a bat girl (her lifetime dream).</p>
               <a class="read-more-link"
-                href="https://www.today.com/news/yankees-fan-serve-bat-girl-60-years-after-being-turned-t223991">Read
+                href="https://www.today.com/news/yankees-fan-serve-bat-girl-60-years-after-being-tuSample photorned-t223991"
+                target="_blank">Read
                 more</a>
             </div>
           </article>
           <article>
             <img class="featured-image" src="./resources/img/site-content/nick-fewings--2lJGRIY5P0-unsplash.jpg"
-              alt="Sample photo">
+              alt="plastic waste">
             <div class="featured-single">
               <h3>India vs. Plastic</h3>
               <p class="featured-paragraph">The Indian government banned a long list of single-use plastics, like
                 cutlery
                 and thin bags.</p>
               <a class="read-more-link"
-                href="https://www.goodnewsnetwork.org/india-bans-long-list-of-single-use-plastics/">Read
+                href="https://www.goodnewsnetwork.org/india-bans-long-list-of-single-use-plastics/" target="_blank">Read
                 more</a>
             </div>
           </article>
           <article>
             <img class="featured-image" src="./resources/img/site-content/blaz-erzetic-lVPeU3K44I8-unsplash.jpg"
-              alt="Sample photo">
+              alt="woman listening to music">
             <div class="featured-single">
               <h3>Empathy and Music</h3>
               <p class="featured-paragraph">The brain of people who are very empathetic processes music differently!</p>
               <a class="read-more-link"
-                href="https://www.goodnewsnetwork.org/highly-empathetic-process-music-differently-smu/">Read more</a>
+                href="https://www.goodnewsnetwork.org/highly-empathetic-process-music-differently-smu/"
+                target="_blank">Read more</a>
             </div>
           </article>
           <article>
             <img class="featured-image" src="./resources/img/site-content/jonathan-borba-lrQPTQs7nQQ-unsplash.jpg"
-              alt="Sample photo">
+              alt="woman exercising">
             <div class="featured-single">
               <h3>Epic Metabolism</h3>
               <p class="featured-paragraph">Your metabolism doesn't slown down after your 30s, as we previously thought.
               </p>
               <a class="read-more-link"
-                href="https://www.goodnewsnetwork.org/metabolism-does-not-slow-down-in-midlife-adulthood/">Read more</a>
+                href="https://www.goodnewsnetwork.org/metabolism-does-not-slow-down-in-midlife-adulthood/"
+                target="_blank">Read more</a>
             </div>
           </article>
           <article>
-            <img class="featured-image" src="./resources/img/site-content/david-brooke-martin-50cGSHm1Jro-unsplash.jpg">
+            <img class="featured-image" src="./resources/img/site-content/david-brooke-martin-50cGSHm1Jro-unsplash.jpg"
+              alt="figure of a gnome meditating">
             <div class="featured-single">
               <h3>Superhero Brain</h3>
               <p>Meditation for 10 minutes a day can make help you focus and make your brain quicker.</p>
               <a class="read-more-link"
-                href="https://www.positive.news/lifestyle/health/meditating-can-make-your-brain-quicker-how-to-meditate/">Read
+                href="https://www.positive.news/lifestyle/health/meditating-can-make-your-brain-quicker-how-to-meditate/"
+                target="_blank">Read
                 more</a>
             </div>
           </article>
           <article>
             <img class="featured-image" src="./resources/img/site-content/andre-benz-Mn9Fa_wQH-M-unsplash.jpg"
-              alt="Sample photo">
+              alt="city">
             <div class="featured-single">
               <h3>Cities against Depression</h3>
               <p>New research suggests that human interaction in big cities can protect us from depression.</p>
               <a class="read-more-link"
-                href="https://www.positive.news/lifestyle/wellbeing/can-big-cities-protect-us-from-depression-researchers-think-so/">Read
+                href="https://www.positive.news/lifestyle/wellbeing/can-big-cities-protect-us-from-depression-researchers-think-so/"
+                target="_blank">Read
                 more</a>
             </div>
           </article>
           <article>
             <img class="featured-image" src="./resources/img/site-content/miranda-richey-_ZbwdLTnuso-unsplash.jpg"
-              alt="Sample photo">
+              alt="tiger">
             <div class="featured-single">
               <h3>Tiger Comeback</h3>
               <p>Tiger population in Indian national park bounces back from zero to 48 tigers.</p>
               <a class="read-more-link"
-                href="https://www.positive.news/society/positive-news-stories-from-week-29-of-2021/">Read more</a>
+                href="https://www.positive.news/society/positive-news-stories-from-week-29-of-2021/"
+                target="_blank">Read more</a>
             </div>
           </article>
         </main>
