changed some images. added polaroid effect to other news. aligned other news to center of page.

--- a/code/index.html
+++ b/code/index.html
@@ -51,18 +51,20 @@
           alt="Biscuit in a basket">
           <div class="text-other-news">
             <a href="#"> 
-              <h3>Kex/tjex argument continues in Swedish parlament
-              </h3>
+              <h4>Kex/tjex argument continues in Swedish parlament
+              </h4>
             </a>
           </div> 
         </div>
         <div class="small-news">
           <img class="image-other" 
-          src="./biscuit-box.jpg" 
+          src="./jam-biscuits.jpg" 
           alt="Biscuits in a box">
-          <div class="text-other-news">
+          <div class="Jam biscuits">
             <a href="#">
-                <h3>New version of the Ballerina biscuit in stores next month</h3></a>
+              <h4>New version of the Singoalla biscuit in stores next month
+              </h4>
+            </a>
          </div>
         </div>
         <div class="small-news">
@@ -71,19 +73,19 @@
           alt="Picture of a woman in a canoe">
           <div class="text-other-news">
             <a href="#">
-              <h3>Fika for adventurers; tips on what to bring
-              </h3>
+              <h4>Fika for adventurers; tips on what to bring
+              </h4>
             </a>
           </div>
         </div>
         <div class="small-news">
           <img class="image-other" 
           src="./child-baking.jpg" 
-          alt="Woman and Child in kitchen baking">
+          alt="Children baking">
           <div class="text-other-news">
             <a href="#">
-                <h3>How to get you child interested in baking
-                </h3>
+                <h4>How to get you child interested in baking
+                </h4>
               </a>
           </div>
         </div>
@@ -93,41 +95,41 @@
         alt="Cinnamon buns">
         <div class="text-other-news">
           <a href="#">
-            <h3>Research indicates that fika could be the solution to world peace
-            </h3>
+            <h4>Research indicates that fika could be the solution to world peace
+            </h4>
           </a>
         </div>
       </div>
       <div class="small-news">
         <img class="image-other" 
         src="./coffee-cups.jpg" 
-        alt="Cups of coffee in a circle">
+        alt="Cups of coffee">
         <div class="text-other-news">
           <a href="#">
-            <h3>What your coffee cup tells us about you
-            </h3>
+            <h4>What your coffee cup tells us about you
+            </h4>
           </a>
         </div>
       </div>
       <div class="small-news">
         <img class="image-other" 
-        src="./healthy-biscuit.jpg" 
-        alt="Biscuits with fruit on">
+        src="./cake-fruit.jpg" 
+        alt="Cakes with fruit">
           <div class="text-other-news">
             <a href="#">
-              <h3>If there's fruit on them, they're healthy!
-              </h3>
+              <h4>If there's fruit on them, they're healthy!
+              </h4>
            </a>
          </div>
       </div>
       <div class="small-news">
         <img class="image-other" 
-        src="./Macaron-tower.jpg" 
-        alt="Tower of macarons">
+        src="./flower-cakes.jpg" 
+        alt="Cakes with piped flowers">
         <div class="text-other-news">
           <a href="#">
-            <h3>How your choice in wedding fika can make your special day unique
-            </h3>
+            <h4>How your choice in wedding fika can make your special day unique
+            </h4>
           </a>
         </div>
       </div>
