adjusted the css to the mobile first approach and added button to big news section

--- a/code/index.html
+++ b/code/index.html
@@ -27,11 +27,16 @@
         <!-- The big news content -->
       <section>
         <div class="row-block">
-          <div class="big-news-image" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);">
-          </div>
-            <div class="big-news-text">
-              <h2>An eyecatching heading</h2>
-              <p>Have a look at <b>A space princess</b> any many more beautiful photos by Kristina Alexanderson. </p>
+        <div class="big-news-image" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);">
+        </div>
+        <div class="big-news-text">
+          <h2>
+            <a href="#" alt="kalexanderson">A heading</a>
+          </h2>
+          <p>Have a look at <b>A space princess</b> any many more beautiful photos by Kristina Alexanderson. </p>
+          <button class="btn news-btn">
+            <a href="#">My button</a>
+          </button>
           </div>
         </div>
       </section>
