font-styles and images are changed

--- a/code/index.html
+++ b/code/index.html
@@ -11,6 +11,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+
+  
+
+
 </head>
 
 <body>
@@ -21,8 +26,8 @@
 
   <header>
     <nav class="navigation">
-      <img class="logo" src="./images/am-logo.png" alt="Logo">
-      <h1> ARCHITECTURE MAGAZINE</h1>
+      <img class="logo" src="./images/logoa.png" alt="Logo">
+      <h1> ARCH MAG</h1>
 
       <div class="left">
         <a class="left-links" href="#">HOME</a>
@@ -42,9 +47,8 @@
 
   <section class="big-news">
 
-    <img class="big-news-image" src="./images/fran.jpg" alt="Fran">
-    <h2 class="big-news-text"> <em>
-        This week a redesign of the Hadid`s building by Henry Rogers was announced!</em> <br>
+    <img class="big-news-image" src="./images/nina.jpg" alt="Nina">
+    <h2 class="big-news-text"> This week a redesign of the Hadid`s building by Henry Rogers was announced!<br>
       <br> This week on ARCHMAG, insurance company Hadid`s of London revealed it would overhaul the iconic Underwriting
       Room at the heart of its high-tech building in London designed by Henry Rogers.
       <br>
@@ -62,7 +66,7 @@
 
     <div class="card">
       <h4>DESIGN</h4>
-      <img class="news-image" src="./images/adrien.jpg" alt="Adrien">
+      <img class="news-image" src="./images/lance.jpg" alt="Lance">
       <p>The architect changed the original house by making the garden participate actively in the composition of the house concept. <br>
         <a href="#">Read more >></a> </p>
     </div>
@@ -97,7 +101,7 @@
     </div>
     <div class="card">
       <h4>DESIGN</h4>
-      <img class="news-image" src="./images/roman.jpg" alt="Roman">
+      <img class="news-image" src="./images/adrien.jpg" alt="Adrien">
       <p>The building is a public space owned by citizens and open to all people. Its design was done by encouraging
         active participation among residents and partners. <br> <a href="#">Read more >></a> </p>
     </div>
