fixed non-semantic navbar

--- a/code/index.html
+++ b/code/index.html
@@ -28,10 +28,10 @@
   <div class="global-container">
     <header>
       <!-- Logo and navbar -->
-      <nav>
-        <div class="nav-bar">
-          <!--Logo created with the logo generator tool by hatchful.shopofy.com-->
-          <img class="logo-transparent" src="./resources/img/brand-assets/logo.png" alt="nuntii logo">
+      <div class="nav-bar">
+        <img class="logo-transparent" src="./resources/img/brand-assets/logo.png" alt="nuntii logo">
+        <nav>
+          <!--Logo created with the logo generator tool by hatchful.shopify.com-->
           <ul class="main-nav">
             <li><a href="#jump-to-main">Today's News</a></li>
             <li><a href="#jump-to-featured">Featured</a></li>
@@ -39,8 +39,8 @@
             <li><a href="#jump-to-footer">Contact</a></li>
             </a>
           </ul>
-        </div>
-      </nav>
+        </nav>
+      </div>
       <section class="hero">
         <div class="hero-container">
           <div class="hero-text">
