fixed main news

--- a/code/index.html
+++ b/code/index.html
@@ -36,7 +36,7 @@
 
   <hr>
   <section class="flex-parent">
-    <div class="flex-child-blue">
+    <div class="flex-child blue">
       <img src="rainfall.jpg" alt="Germany">
       <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
         emphasise design elements over content.
