links in footer, hover effects, styling

--- a/code/index.html
+++ b/code/index.html
@@ -103,10 +103,20 @@
 
   </body>
 
-    <div class="footer">
-      <a href="https://www.technigo.io/">
-      <img class="technigo-logo" src="./logo.svg" alt="technigo-logo">
-      </a>
-    </div>
+  <footer class="footer">
+    <a href="https://www.technigo.io/">
+      <div class="technigo">
+        <img class="technigo-logo" src="./logo.svg" alt="technigo-logo">
+        <p>Check them out!</p>
+      </div>
+    </a>
+    <a href="https://github.com/hemmahosjessi">
+      <div class="github">
+        <p>@hemmahosjessi</p>
+        <img class="github-logo" src="./GitHub-Mark-64px.png" alt="github-logo">
+      </div>
+    </a>
+  </footer>
+
 
 </html>
