hover on foxlogo

--- a/code/index.html
+++ b/code/index.html
@@ -12,10 +12,12 @@
   </head>
   <body>
     <header class="header">
+      <a href="#">  
       <div class="fox-logo">
         <img class="the-fox" src="./foxlogo.svg" alt="team foxes logotype" />
         <h1>Foxy</h1>
       </div>
+    </a>
       <nav class="navigation">
           <a id="link-id" href="#">About The Foxes</a>
           <a id="link-id" href="#">Want to contribute?</a>
