-display multiple cards on mobile, ipad and desktop

--- a/code/index.html
+++ b/code/index.html
@@ -19,7 +19,14 @@
     </header>
 
     <div class="intro">
-        <img class="main-photo" src="https://images.unsplash.com/photo-1587899158320-eced0d5f91d1?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="intro-photo">        <div class="main-story">Welcome to Skane!</div>
+        <img class="main-photo" src="https://images.unsplash.com/photo-1587899158320-eced0d5f91d1?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="intro-photo">        
+    <div class="main-story">
+      “ Small <br>
+      Scandinavian <br>
+      province – <br>
+      large chunk of <br>
+      paradise ”
+    </div>
     </div>
   
     <div class="card-container">
@@ -66,6 +73,13 @@
         </p>
    </div>
    <div class="card">
+    <img class="card-photo" src="https://images.unsplash.com/photo-1618720478692-abab0ff1ae50?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="kivik">
+    <h3 class="card-name"> kivik</h3> 
+    <p class="card-description">
+       Stenshuvud National park has the best beach you'll ever find.
+     </p>
+  </div>
+  <div class="card">
     <img class="card-photo" src="https://images.unsplash.com/photo-1618720478692-abab0ff1ae50?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="kivik">
     <h3 class="card-name"> kivik</h3> 
     <p class="card-description">
