--- a/code/index.html
+++ b/code/index.html
@@ -5,6 +5,9 @@
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">  
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Besley&display=swap');
+      </style>
   </head>
   
   <body>
@@ -19,7 +22,7 @@
     </header>
 
     <div class="intro">
-        <img class="main-photo" src="https://images.unsplash.com/photo-1587899158320-eced0d5f91d1?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="intro-photo">        
+        <img class="main-photo" src="img/kivik.jpg" alt="intro-photo">        
     <div class="main-story">
       “ Small <br>
       Scandinavian <br>
@@ -31,85 +34,66 @@
   
     <div class="card-container">
       <div class="card">
-         <img class="card-photo" src="https://images.unsplash.com/photo-1618720478692-abab0ff1ae50?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="kivik">
-         <h3 class="card-name"> kivik</h3> 
+         <img class="card-photo" src="img/ales stones.jpg" alt="ales stenar">
+         <h3 class="card-name">Classic attractions</h3> 
          <p class="card-description">
-            Stenshuvud National park has the best beach you'll ever find.
+          Make sure you don’t miss Skåne's classic tourist attractions and most exciting places to visit. Visit memorable landmarks, take a guided tour, snap breathtaking views and tick off the places that make up your ultimate Skåne experience.
           </p>
       </div>
       <div class="card">
-          <img class="card-photo" src="https://images.unsplash.com/photo-1618720478692-abab0ff1ae50?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="kivik">
-          <h3 class="card-name"> kivik</h3> 
+          <img class="card-photo" src="img/food.jpg" alt="food">
+          <h3 class="card-name"> Food & Drinks</h3> 
           <p class="card-description">
-             Stenshuvud National park has the best beach you'll ever find.
+            With locally grown produce from rich, fertile soils, prepared with love and care, we promise you’ll enjoy every mouthful in the eateries around the region. Organic farm shops, winery tours and gastronomic experiences beyond the ordinary – you’ll find it all here.
            </p>
       </div>
       <div class="card">
-        <img class="card-photo" src="https://images.unsplash.com/photo-1618720478692-abab0ff1ae50?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="kivik">
-        <h3 class="card-name"> kivik</h3> 
+        <img class="card-photo" src="img/paddling.jpg" alt="paddling">
+        <h3 class="card-name">Outdoors & Adventure</h3> 
         <p class="card-description">
-           Stenshuvud National park has the best beach you'll ever find.
+          Full of lush beech forests, peaceful countryside and a majestic coastline on three sides, Skåne is a natural playground. Go for hikes in our national parks, bike through yellow canola fields, go canoeing, kayaking, paragliding and much more. 
          </p>
      </div>
      <div class="card">
-         <img class="card-photo" src="https://images.unsplash.com/photo-1618720478692-abab0ff1ae50?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="kivik">
-         <h3 class="card-name"> kivik</h3> 
+         <img class="card-photo" src="img/unique living.jpg" alt="unique living">
+         <h3 class="card-name">Unique living</h3> 
          <p class="card-description">
-            Stenshuvud National park has the best beach you'll ever find.
+          From luxurious castles to simple cottages, relaxing spas to a tent under the stars, there’s a place to stay that suits your style – and your wallet. Here's the collection of the most unique accommodations Skåne has to offer, to make your stay in Skåne the most memorable yet.
           </p>
      </div>
      <div class="card">
-      <img class="card-photo" src="https://images.unsplash.com/photo-1618720478692-abab0ff1ae50?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="kivik">
-      <h3 class="card-name"> kivik</h3> 
+      <img class="card-photo" src="img/farm.jpg" alt="culture">
+      <h3 class="card-name">Culture</h3> 
       <p class="card-description">
-         Stenshuvud National park has the best beach you'll ever find.
+        With history that streches back to the Viking Age, Skåne is filled with historic buildings, museums and cultural landmarks for you to explore. Learn more about the Swedish and Danish heritage, Scandinavian design and a thriving arts scene.
        </p>
    </div>
    <div class="card">
-       <img class="card-photo" src="https://images.unsplash.com/photo-1618720478692-abab0ff1ae50?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="kivik">
-       <h3 class="card-name"> kivik</h3> 
+       <img class="card-photo" src="img/family.jpg" alt="family fun">
+       <h3 class="card-name">Family fun</h3> 
        <p class="card-description">
-          Stenshuvud National park has the best beach you'll ever find.
+        Skåne is the go-to getaway for curious kids who enjoy romping around the countryside. Full of activities for children of all ages, enjoy Skåne's zoo, water parks, merry-go-rounds, go-karts, skateboarding and much more.
         </p>
    </div>
    <div class="card">
-    <img class="card-photo" src="https://images.unsplash.com/photo-1618720478692-abab0ff1ae50?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="kivik">
-    <h3 class="card-name"> kivik</h3> 
+    <img class="card-photo" src="img/fika.jpg" alt="shopping">
+    <h3 class="card-name">Design & Shopping</h3> 
     <p class="card-description">
-       Stenshuvud National park has the best beach you'll ever find.
+      Skåne has been the hub of the Scandinavian design scene for years and the region is buzzing with crafts, scandinavian furniture, textile design, architecture and fashion. Drop in some shops and shop 'til you drop, choosing from the very best in traditional handicrafts and modern Scandinavian design.
      </p>
   </div>
   <div class="card">
-    <img class="card-photo" src="https://images.unsplash.com/photo-1618720478692-abab0ff1ae50?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="kivik">
-    <h3 class="card-name"> kivik</h3> 
+    <img class="card-photo" src="img/history.jpg" alt="history">
+    <h3 class="card-name">For history lovers</h3> 
     <p class="card-description">
-       Stenshuvud National park has the best beach you'll ever find.
+      Good news for all history buffs out there – your quest for ancient ruins, sacred wonders and world-famous landmarks need not be squandered at. Dating all the way back to when Skåne was home to dinosaurs and up to today, makes for a multitude of mysterious places for you to explore. 
      </p>
   </div>
-
-        <!-- <div class="card">
-        <img src="https://images.unsplash.com/photo-1590692750735-48193f50f2a0?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8eXN0YWR8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="ystad">
-        <p>
-          Ystad is full of traditional houses.
-        </p>
-      </div>
-        <div class="card">
-        <img src="https://images.unsplash.com/photo-1486375680560-d2653bf9c829?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YnJhbnRldmlrfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="brantevik">
-        <p>
-          A small but beautiful fishing village in Skane.
-        </p>
-      </div>
-        <div class="card"> Ales-stenar
-          <img src="https://images.unsplash.com/photo-1554746532-17e04f6b0d2d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1018&q=80" alt="stenar"/>
-          <p>
-            You can see beautiful stones
-          </p>
-        </div> -->
-     </div>
+</div>
     
-      <div class="footer">
-        <img src="https://api.freelogodesign.org/files/0e9d86503a3347658bd26c0c21f3fbfd/thumb/logo_200x200.png?v=0" alt="footer logo"/>
-      </div>
-  </body>
- 
+<div class="footer">
+  <img class="footer" src="./img/Haru Ahn.png" alt="name"/>
+</div>
+
+</body>
 </html>
