Added fade out animation to news cards

--- a/code/index.html
+++ b/code/index.html
@@ -41,16 +41,16 @@
 				</div>
 			</div>
 			<nav>
-				<a class="first-nav" href="http://" target="_blank">News</a>
-				<a href="http://" target="_blank">Opinion</a>
-				<a href="http://" target="_blank">Sport</a>
+				<a class="first-nav" href="#big-news-section">News</a>
+				<a href="#small-news-section">Opinion</a>
+				<a href="#sport-news-section">Sport</a>
 				<a href="http://" target="_blank">Culture</a>
 				<a href="http://" target="_blank">Lifestyle</a>
 				<a class="last-nav" href="http://" target="_blank">More</a>
 			</nav>
 		</header>
 		<main>
-			<section class="big-news-container">
+			<section id="big-news-section" class="big-news-container">
 				<!-- <div class="dummy-img"></div> -->
 				<!-- The big news content -->
 
@@ -64,7 +64,7 @@
 					dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 				</article>
 			</section>
-			<section class="small-news-container">
+			<section id="small-news-section" class="small-news-container">
 				<!-- The other news  -->
 				<div class="small-news-card">
 					<img class="small-news-card-img" src="./images/img2.jpg" alt="breaking news image" />
@@ -154,7 +154,7 @@
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 					</article>
 				</div>
-				<div class="small-news-card">
+				<div id="sport-news-section" class="small-news-card">
 					<img class="small-news-card-img" src="./images/img5.jpg" alt="breaking news image" />
 					<article class="small-news-text">
 						<p class="small-news-title">Another News Title /</p>
