added comments, removed unnecessary lines,edited code

--- a/code/index.html
+++ b/code/index.html
@@ -27,6 +27,8 @@
           </h2>
         </div>
       </div>
+
+      <!-- navbar -->
       <nav class="site-header-mobile-nav">
         <input id="toggle" type="checkbox" style="visibility:hidden">
           <label for="toggle">
@@ -53,7 +55,7 @@
     
     <hr class="thick" />
     <main>
-      <a id="fake_news"></a>
+      <a id="fake_news"><h2>Fake News</h2></a>
       <section id="site-big-news" class="section-news">
         <!-- big news with hero image -->
         <div class="section-news-wrap big-news-wrap">
@@ -64,7 +66,6 @@
                 alt="man in milk and cereal"
                 class="mobile-news-image hero-image"
               />
-              <div class="news-image-ovelay"></div>
             </div>
           </figure>
           <div class="site-news-body big-news">
@@ -85,7 +86,7 @@
         </div>
       </section>
 
-      <a id="more_fake_news"></a>
+      <a id="more_fake_news"><h2>More Fake News</h2></a>
       <section class="site-news section-news">
         <!-- The other news  -->
         <div class="section-news-wrap">
@@ -330,16 +331,16 @@
           </div>
         </div>
       </section>
+      <a id="get_help"><h2>Get Help</h2></a>
     </main>
 
-    <a id="get_help"></a>
     <footer>
       <div class="footer-wrap">
         <a href="#" class="footer-site-name-link">The Fake News Site</a>
         <div class="footer-social-media-icon">
           <a href="https://sv-se.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
           <a href="https://twitter.com/?lang=sv" target="_blank"><i class="fab fa-twitter-square"></i></a>
-          <a href="https://www.instagram.com/"><i class="fab fa-instagram-square"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
       </div>
     </footer>
     <hr class="thick" />
